--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,4 +14,7 @@
   .header-link {
     @apply cursor-pointer text-sm font-light text-[#e5e5e5] transition duration-300 hover:text-[#b3b3b3];
   }
+  .banner-btn {
+    @apply flex items-center gap-x-2 rounded px-5 py-1.5 text-sm font-semibold transition hover:opacity-75 md:py-2.5 md:px-8 md:text-xl;
+  }
 }
