--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,4 +17,8 @@
   .banner-btn {
     @apply flex items-center gap-x-2 rounded px-5 py-1.5 text-sm font-semibold transition hover:opacity-75 md:py-2.5 md:px-8 md:text-xl;
   }
+
+  .loginInput {
+    @apply w-full rounded bg-[#333] py-3.5 px-5 placeholder-[gray] outline-none focus:bg-[#454545];
+  }
 }
